--- a/main/api-gateway/src/main/resources/application.yaml
+++ b/main/api-gateway/src/main/resources/application.yaml
@@ -46,3 +46,9 @@ spring:
             - Path=${app.api-prefix}/chat/**
           filters:
             - StripPrefix=2
+        - id: feedback_service
+          uri: http://localhost:9005
+          predicates:
+            - Path=${app.api-prefix}/feedback/**
+          filters:
+            - StripPrefix=2
