--- a/main/api-gateway/src/main/resources/application.yaml
+++ b/main/api-gateway/src/main/resources/application.yaml
@@ -52,3 +52,9 @@ spring:
             - Path=${app.api-prefix}/feedback/**
           filters:
             - StripPrefix=2
+        - id: recruitment_service
+          uri: http://localhost:8088
+          predicates:
+            - Path=${app.api-prefix}/recruitment/**
+          filters:
+            - StripPrefix=2
