--- a/recruitment-service/src/main/resources/application.yml
+++ b/recruitment-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     compatibility-verifier:
       enabled: false
   datasource:
-    url: jdbc:mysql://localhost:3306/ims-scheduling
+    url: jdbc:mysql://localhost:3306/ims-recruitment
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password:
